@@ -1364,6 +1364,7 @@ Localization
         #LOC_BDArmory_MaxPitch = Max Pitch
         #LOC_BDArmory_MinPitch = Min Pitch
         #LOC_BDArmory_YawRange = Yaw Range
+        #LOC_BDArmory_YawStandbyAngle = Yaw Standby Angle
         #LOC_BDArmory_FireLimits = Fire Limits
         #LOC_BDArmory_FireLimits_disabledText = None
         #LOC_BDArmory_FireLimits_enabledText = In range
