@@ -4,6 +4,7 @@
 - AI / WM:
 	- Add missing unclamped limits for 3-axis static damping.
 - Weapons:
+	- Add a "Yaw Standby Angle" slider to gun turrets.
 	- Missiles:
 		- Add improved missile controller.
 		- Fix multi-missile launcher issues when railAmmo > launcher rails on the model.
